--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -2,6 +2,24 @@ server:
   error:
     include-stacktrace: never
 
+spring:
+  devtools:
+    restart:
+      enabled: false
+    livereload:
+      enabled: false
+
+  datasource:
+    url: ${JDBC_DATABASE_URL}
+#    username: ""
+#    password: ""
+#    url: "jdbc:h2:./taskManager"
+
+
+
+  jpa:
+    show-sql: false
+
 logging:
   level:
     ROOT: INFO
