--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -5,7 +5,15 @@ spring:
   application:
     name: javaproject73
 
+  liquibase:
+    enabled: true
+    change-log: classpath:db/changelog/changelog-master.xml
+
   mvc:
     hiddenmethod:
       filter:
         enabled: true
+
+  jpa:
+    hibernate:
+      ddl-auto: create-drop
