--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -10,12 +10,9 @@ spring:
       enabled: false
 
   datasource:
+    username: ${PGUSER}
+    password: ${PGPASSWORD}
     url: ${JDBC_DATABASE_URL}
-#    username: ""
-#    password: ""
-#    url: "jdbc:h2:./taskManager"
-
-
 
   jpa:
     show-sql: false
