--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -1,10 +1,9 @@
 server:
   port: ${PORT:5000}
 
-spring:
-  application:
-    name: javaproject73
+base-url: /api
 
+spring:
   liquibase:
     enabled: true
     change-log: classpath:db/changelog/changelog-master.xml
