--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ dependencies {
 			'org.springframework.boot:spring-boot-starter-web',
 			'org.springframework.boot:spring-boot-starter-actuator',
 			'org.springframework.boot:spring-boot-starter-validation',
+			'org.springframework.boot:spring-boot-starter-security',
 			'io.jsonwebtoken:jjwt:0.9.1',
 			'com.querydsl:querydsl-core:5.0.0',
 			'com.querydsl:querydsl-jpa:5.0.0',
@@ -54,12 +55,16 @@ dependencies {
 	)
 
 	runtimeOnly (
+			'com.h2database:h2:1.4.200',
 			'org.postgresql:postgresql:42.2.24'
 	)
 
 	testImplementation(
 			'org.springframework.boot:spring-boot-starter-test',
-			'com.tobedevoured.modelcitizen:spring:0.8.3'
+			'org.springframework.boot:spring-boot-starter-security',
+			'org.springframework.security:spring-security-test:5.5.1',
+			'com.tobedevoured.modelcitizen:spring:0.8.3',
+			'com.github.database-rider:rider-junit5:1.32.0'
 	)
 }
 
