--- a/src/test/resources/config/application.yml
+++ b/src/test/resources/config/application.yml
@@ -1,9 +1,9 @@
-server:
-  port: ${PORT:5000}
-
-base-url: /api
+base-url: ""
 
 spring:
+  jpa:
+    show-sql: true
+
   liquibase:
     enabled: true
     change-log: classpath:db/changelog/changelog-master.xml
@@ -13,6 +13,6 @@ spring:
       filter:
         enabled: true
 
-  jpa:
-    hibernate:
-      ddl-auto: create-drop
+logging:
+  level:
+    root: INFO
