--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,12 @@ plugins {
 	id 'com.github.ben-manes.versions' version '0.38.0'
 	id 'jacoco'
 	id 'org.liquibase.gradle' version '2.0.4'
+	// Сборщик фронтенда
+	id 'org.siouan.frontend-jdk11' version '6.0.0'
+	// Плагины для swagger
+	// Позволяют получить сгенерированную документацию по API в виде json файла
+	id 'org.springdoc.openapi-gradle-plugin' version '1.3.3'
+	id 'com.github.johnrengelman.processes' version '0.5.0'
 }
 
 group = 'hexlet.code.javaproject73'
@@ -43,7 +49,11 @@ dependencies {
 			'com.rollbar:rollbar-spring-boot-webmvc:1.8.1',
 			'org.liquibase:liquibase-core:4.6.1',
 			'com.querydsl:querydsl-core:5.0.0',
-			'com.querydsl:querydsl-jpa:5.0.0'
+			'com.querydsl:querydsl-jpa:5.0.0',
+			// Зависимость для swagger
+			// Позволяет сгенерировать и проматривать интерактивную документацию по API
+			'org.springdoc:springdoc-openapi-ui:1.5.12'
+
 	)
 
 	liquibaseRuntime(
@@ -105,3 +115,32 @@ liquibase {
 		}
 	}
 }
+
+frontend {
+	nodeVersion = '16.13.1'
+	installScript = 'install'
+	assembleScript = 'run build'
+	packageJsonDirectory = file("${projectDir}/frontend")
+}
+
+def configFrontendTasks = {
+	inputs.files(fileTree("$projectDir/frontend").exclude('build', 'node_modules'))
+	outputs.dir("$buildDir/resources/main/static")
+}
+
+assembleFrontend {
+	configure configFrontendTasks
+
+	doLast {
+		copy {
+			from "$projectDir/frontend/build"
+			into "$buildDir/resources/main/static"
+		}
+	}
+}
+
+installFrontend {
+	configure configFrontendTasks
+}
+
+processResources.dependsOn assembleFrontend
