update app configs

--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -11,6 +11,13 @@ spring:
   jpa:
     show-sql: true
 
+  h2:
+    console:
+      enabled: true
+      path: /h2console/
+      settings:
+        web-allow-others: true
+
 logging:
   level:
     root: INFO
