--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,20 @@
 plugins {
+	id 'org.springframework.boot' version '2.5.5'
+	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+	id 'java'
 	id 'application'
 	id 'checkstyle'
-	id 'org.springframework.boot' version '2.5.6'
-	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+	id 'jacoco'
+
 	id 'com.adarshr.test-logger' version '2.1.1'
 	id 'com.github.ben-manes.versions' version '0.38.0'
-	id 'jacoco'
+
 	id 'org.liquibase.gradle' version '2.0.4'
-	// Сборщик фронтенда
-	id 'org.siouan.frontend-jdk11' version '6.0.0'
-	// Плагины для swagger
-	// Позволяют получить сгенерированную документацию по API в виде json файла
+
 	id 'org.springdoc.openapi-gradle-plugin' version '1.3.3'
 	id 'com.github.johnrengelman.processes' version '0.5.0'
+
+	id 'org.siouan.frontend-jdk11' version '6.0.0'
 }
 
 group = 'hexlet.code.javaproject73'
@@ -27,6 +29,8 @@ repositories {
 }
 
 dependencies {
+	implementation 'org.springframework.boot:spring-boot-starter'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	compileOnly 'org.projectlombok:lombok:1.18.22'
 
 	annotationProcessor(
@@ -43,16 +47,16 @@ dependencies {
 			'org.springframework.boot:spring-boot-starter-actuator',
 			'org.springframework.boot:spring-boot-starter-validation',
 			'org.springframework.boot:spring-boot-starter-security',
+			"org.springframework.security:spring-security-config",
 			'io.jsonwebtoken:jjwt:0.9.1',
-			'com.querydsl:querydsl-core:5.0.0',
-			'com.querydsl:querydsl-jpa:5.0.0',
-			'com.rollbar:rollbar-spring-boot-webmvc:1.8.1',
+			'org.springdoc:springdoc-openapi-ui:1.5.12',
 			'org.liquibase:liquibase-core:4.6.1',
+
+			'com.h2database:h2:1.4.200',
+			'org.postgresql:postgresql:42.2.24',
+
 			'com.querydsl:querydsl-core:5.0.0',
 			'com.querydsl:querydsl-jpa:5.0.0',
-			// Зависимость для swagger
-			// Позволяет сгенерировать и проматривать интерактивную документацию по API
-			'org.springdoc:springdoc-openapi-ui:1.5.12'
 
 	)
 
@@ -60,8 +64,7 @@ dependencies {
 			sourceSets.main.output,
 			'org.liquibase:liquibase-core:4.6.1',
 			'org.liquibase.ext:liquibase-hibernate5:4.5.0',
-			'org.springframework.boot:spring-boot-starter-data-jpa',
-			'org.postgresql:postgresql'
+			'org.springframework.boot:spring-boot-starter-data-jpa'
 	)
 
 	runtimeOnly (
@@ -70,9 +73,9 @@ dependencies {
 	)
 
 	testImplementation(
-			'org.springframework.boot:spring-boot-starter-test',
 			'org.springframework.boot:spring-boot-starter-security',
 			'org.springframework.security:spring-security-test:5.5.1',
+			'org.springframework.boot:spring-boot-starter-test',
 			'com.tobedevoured.modelcitizen:spring:0.8.3',
 			'com.github.database-rider:rider-junit5:1.32.0'
 	)
@@ -88,14 +91,23 @@ compileJava {
 	options.encoding = 'UTF-8'
 }
 
+test {
+	useJUnitPlatform()
+}
+
 jacocoTestReport {
 	reports {
 		xml.required = true
 	}
 }
 
-test {
+jacocoTestReport {
+	dependsOn test // tests are required to run before generating the report
+}
+
+tasks.named('test') {
 	useJUnitPlatform()
+	finalizedBy jacocoTestReport
 }
 
 diffChangeLog {
