--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -8,6 +8,9 @@ springdoc:
     path: /swagger-ui.html
 
 spring:
+  application:
+    name: taskManager
+
   liquibase:
     enabled: true
     change-log: classpath:db/changelog/changelog-master.xml
@@ -18,5 +21,6 @@ spring:
         enabled: true
 
   jpa:
+    show-sql: true
     hibernate:
       ddl-auto: create-drop
