--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,7 @@ dependencies {
 
 			'com.querydsl:querydsl-core:5.0.0',
 			'com.querydsl:querydsl-jpa:5.0.0',
+			'com.rollbar:rollbar-spring-boot-webmvc:1.8.1'
 
 	)
 
