--- a/build.gradle
+++ b/build.gradle
@@ -17,11 +17,11 @@ plugins {
 	id 'org.siouan.frontend-jdk11' version '6.0.0'
 }
 
-group = 'hexlet.code.javaproject73'
+group = 'hexlet.code.app'
 version = '1.0-SNAPSHOT'
 
 application {
-	mainClass = 'hexlet.code.javaproject73.App'
+	mainClass = 'hexlet.code.app.App'
 }
 
 repositories {
@@ -121,7 +121,7 @@ liquibase {
 			url 'jdbc:h2:./taskManager'
 			username ''
 			password ''
-			referenceUrl 'hibernate:spring:hexlet.code.javaproject73.model.' +
+			referenceUrl 'hibernate:spring:hexlet.code.app.model.' +
 					'?dialect=org.hibernate.dialect.H2Dialect' +
 					'&hibernate.physical_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy'
 		}
